--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ ifdef::backend-html5[]
 <script src="https://darshandsoni.com/asciidoctor-skins/switcher.js" type="text/javascript"></script>
 ++++
 
-IMPORTANT: Puedes descargarte una versión en PDF desde https://flserv.github.io/asciidoc/ebook.pdf[aquí.]
+IMPORTANT: Puedes descargarte una versión en PDF desde https://flserv.github.io/Control_y_robotica/ebook.pdf[aquí.]
 
 endif::[]
 
